reduce classloading
GitOrigin-RevId: 6f8d704c8f2638624915b6eef0ed0889b4e5f0c2